ports/gtkshell: Full review of the port. Added also xshell binary.
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@372 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/gtkshell/Makefile-gtkshell.patch
+++ b/gtkshell/Makefile-gtkshell.patch
@@ -6,5 +6,5 @@
 < 	install gtkshell $(PREFIX)/bin
 < 	install gshterm $(PREFIX)/bin
 ---
-> 	install -D -m 0755 gtkshell $(PREFIX)/usr/bin/gtkshell
-> 	install -D -m 0644 libgtkshell.a $(PREFIX)/usr/lib/antiright/libgtkshell.a
+> 	install -D -m 0755 gtkshell $(DESTDIR)/usr/bin/gtkshell
+> 	install -D -m 0644 libgtkshell.a $(DESTDIR)/usr/lib/antiright/libgtkshell.a
