ports/rsyslog: fixed rc script
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@1008 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/rsyslog/rsyslog.rc
+++ b/rsyslog/rsyslog.rc
@@ -5,7 +5,7 @@
 
 case $1 in
 start)
-        /usr/sbin/rsyslogd -c3
+        /usr/sbin/rsyslogd
         ;;
 stop)
         /usr/bin/killall rsyslogd
