ports/rsyslog: update to 4.2.0 and fixed some files (thanks Juergen for your notes)
git-svn-id: file:///tmp/crux.sepen.svnrepo/trunk/ports@1010 e5078a59-c42a-0410-a761-6d5b026a78ea

--- a/rsyslog/rsyslog.conf
+++ b/rsyslog/rsyslog.conf
@@ -2,11 +2,21 @@
 # /etc/rsyslog.conf
 #
 
-$template TraditionalFormat,"%timegenerated% %HOSTNAME% %syslogtag%%msg:::drop-last-lf%\n"
+$ModLoad imklog
+$ModLoad immark
+$ModLoad imuxsock
 
-*.emerg                                 *;TraditionalFormat
-authpriv.*;auth.*                       /var/log/auth;TraditionalFormat
-mail.*                                  -/var/log/mail;TraditionalFormat
-*.info;authpriv,auth,mail.none          /var/log/messages;TraditionalFormat
+$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
+
+$FileCreateMode 0640
+$DirCreateMode 0755
+$Umask 0022
+
+
+*.emerg                                 *
+authpriv.*;auth.*                       /var/log/auth
+mail.*                                  -/var/log/mail
+kern.*                                  /var/log/kernel
+*.info;authpriv,auth,mail.none          /var/log/messages
 
 # End of file
