--- a/rsyslog/rsyslog.rc
+++ b/rsyslog/rsyslog.rc
@@ -1,21 +1,27 @@
 #!/bin/sh
 #
-# /etc/rc.d/rsyslogd: start/stop rsyslog logging daemons
+# /etc/rc.d/rsyslogd: start/stop rsyslog logging daemon
 #
 
 case $1 in
 start)
-        /usr/sbin/rsyslogd
+        /usr/sbin/rsyslogd -c4
         ;;
 stop)
-        /usr/bin/killall rsyslogd
+        killall /usr/sbin/rsyslogd
         ;;
 restart)
         $0 stop
         sleep 2
         $0 start
         ;;
+reload)
+        kill -s HUP $(pidof rsyslogd)
+        ;;
+
 *)
-        echo "usage: $0 [start|stop|restart]"
+        echo "usage: $0 [start|stop|restart|reload]"
         ;;
 esac
+
+# End of file
